Add formatting and basic information

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Getting Started with Jordan</title>
 </head>
 <body>
-    
+    <h1>A. Jordan Marcellino</h1>
+    <p>I'm learning to code on Codecademy! My goals are to learn new skills and find a meaningful place to work.</p>
 </body>
 </html>
