--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Getting Started with Jordan</title>
 </head>
 <body>
     <h1>A. Jordan Marcellino</h1>
-    <p>I'm learning to code on Codecademy! My goals are to learn new skills and find a meaningful place to work.</p>
+    <p>I'm learning to code on Codecademy! My goals are to learn new skills and find a meaningful place to work.
+    </p>
 </body>
 </html>
